syntax = "proto3";

option go_package = ".;proto";

package proto;

service DatabaseService {
  rpc AllocDatabase(AllocDatabaseRequest) returns (AllocDatabaseResponse) {}
}

message AllocDatabaseRequest {
  string name = 1;
}

message AllocDatabaseResponse {
  bool is_success = 1;
  string dsn = 2;
}